--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,55 +1,36 @@
-# Stage 1: Build
+# --- Stage 1: Build ---
 FROM node:20-alpine AS builder
 WORKDIR /app
-<<<<<<< HEAD
 
-# 1. Copy package files ก่อนเพื่อใช้ Docker Layer Caching
+# 1. ติดตั้ง Dependencies (รวมถึงตัวอ่าน TypeScript)
 COPY package*.json ./
+RUN npm install
 
-# 2. Install dependencies
-# แนะนำให้ลบ --ignore-scripts ออกเพื่อให้มั่นใจว่า libs อื่นๆ ทำงานได้สมบูรณ์
-RUN npm ci
+# 2. Copy ไฟล์ Prisma และ Config (.ts)
+COPY prisma ./prisma/
+COPY prisma.config.ts ./ 
 
-# 3. Copy source code ทั้งหมด (รวมถึงโฟลเดอร์ prisma)
+# 3. *** สำคัญ: Generate Prisma Client ***
+# Prisma 7 จะใช้ jiti ในการอ่านไฟล์ .ts โดยอัตโนมัติ
+RUN npx prisma generate
+
+# 4. Copy โค้ดทั้งหมด
 COPY . .
 
-# 4. --- ส่วนสำคัญ: Generate Prisma Client ---
-# ใช้ dummy URL เพื่อให้ผ่าน validation ช่วง build
-# คำสั่งนี้จะสร้างไฟล์ client ไปไว้ใน node_modules/@prisma/client
-RUN DATABASE_URL="postgresql://dummy:dummy@localhost:5432/dummy"
-# ---------------------------------------
-
-# Stage 2: Production
+# --- Stage 2: Production ---
 FROM node:20-alpine
 WORKDIR /app
 
-# *** เพิ่ม: ติดตั้ง OpenSSL ***
-# Prisma Engine ต้องการ OpenSSL ในการทำงานบน Alpine Linux
+# 5. ติดตั้ง OpenSSL (จำเป็นสำหรับ Prisma 7 บน Alpine)
 RUN apk add --no-cache openssl
 
-# Copy ไฟล์ทั้งหมดจาก builder (รวม node_modules ที่ generate prisma แล้ว)
+# 6. Copy ทุกอย่างจาก builder stage
 COPY --from=builder /app /app
 
-# สร้าง logs dir
-RUN mkdir -p logs
-
-# Healthcheck
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD wget --quiet --tries=1 --spider http://localhost:3000/api/demo || exit 1
-
-=======
-COPY package*.json ./
-RUN npm ci
-COPY . .
-# Stage 2: Production
-FROM node:20-alpine
-WORKDIR /app
-COPY --from=builder /app /app
-# สร้าง logs dir
-RUN mkdir -p logs
-# Healthcheck (เพิมความซับซ้อน: เช็คว่า server พร้อม)
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD wget --quiet --tries=1 --spider http://localhost:3000/api/demo || exit 1
->>>>>>> a6c44ef8090586f6c7367d607d539226a88fcc07
 EXPOSE 3000
+
+# ตรวจสอบว่า API พร้อมทำงาน
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost:3000/api/demo || exit 1
+
 CMD ["node", "server.js"]
